<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginTop="150dp"
            android:contentDescription="@string/logoContentDescription"
            android:padding="10dp"
            android:src="@drawable/ic_app_logo"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_logo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_field"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="55dp"
                android:layout_marginEnd="55dp"
                android:drawableLeft="@drawable/ic_email_outlined"
                android:drawablePadding="15dp"
                android:hint="@string/emailInputHint"
                android:drawableStart="@drawable/ic_email_outlined" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_field"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="55dp"
                android:layout_marginEnd="55dp"
                android:drawableLeft="@drawable/ic_lock_outlined"
                android:drawablePadding="15dp"
                android:hint="@string/passwordInputHint"
                android:drawableStart="@drawable/ic_lock_outlined" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@id/password_input_layout"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintLeft_toRightOf="parent"
            android:id="@+id/forgot_password_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:text="@string/forgotPasswordLabel"
            android:gravity="center_horizontal" />

        <Button
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="55dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="55dp"
            android:background="@drawable/round_button_login"
            android:fontFamily="sans-serif-black"
            android:text="@string/submitButton"
            android:textColor="#FFF"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/forgot_password_option" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="55dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="55dp"
            android:backgroundTint="#303F9F"
            android:background="@drawable/round_button_login"
            android:fontFamily="sans-serif-black"
            android:text="@string/registerButton"
            android:textColor="#FFF"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/submit_button"
            tools:targetApi="lollipop" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>