<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/back_to_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_arrow_back"
            android:drawablePadding="10dp"
            android:textSize="19sp"
            android:gravity="center_horizontal"
            android:padding="25dp"
            android:src="@drawable/ic_arrow_back"
            android:text="@string/back"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/submit_button"
            android:drawableStart="@drawable/ic_arrow_back" />

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginTop="125dp"
            android:contentDescription="@string/logoContentDescription"
            android:padding="10dp"
            android:src="@drawable/ic_app_logo"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/register_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/register"
            android:textSize="18sp"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_logo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingStart="55dp"
            android:paddingLeft="55dp"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/register_form"
            tools:ignore="RtlSymmetry">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username_field"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="55dp"
                android:drawableStart="@drawable/ic_person_filled"
                android:drawableLeft="@drawable/ic_person_filled"
                android:drawablePadding="15dp"
                android:hint="@string/userInputHint"
                android:layout_marginRight="55dp"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="55dp"
            android:paddingLeft="55dp"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/username_input_layout"
            tools:ignore="RtlSymmetry">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_field"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="55dp"
                android:drawableStart="@drawable/ic_email_filled"
                android:drawableLeft="@drawable/ic_email_filled"
                android:drawablePadding="15dp"
                android:hint="@string/emailInputHint"
                android:layout_marginRight="55dp"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="55dp"
            android:paddingLeft="55dp"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/login_input_layout"
            tools:ignore="RtlSymmetry">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_field"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="55dp"
                android:drawableStart="@drawable/ic_lock_filled"
                android:drawableLeft="@drawable/ic_lock_filled"
                android:drawablePadding="15dp"
                android:hint="@string/passwordInputHint"
                android:layout_marginRight="55dp"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="55dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="55dp"
            android:background="@drawable/round_button_login"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="sans-serif-black"
            android:text="@string/confirmRegisterButton"
            android:textColor="#FFF"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_input_layout" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>