<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/schedule_form_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/nav_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_arrow_back"
                android:drawableLeft="@drawable/ic_arrow_back"
                android:text="@string/back"
                android:textSize="20sp" />

        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profileGreetingsLabel"
            android:textSize="19sp"
            app:layout_constraintBottom_toTopOf="@id/user_name"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:maxLines="1"
            android:layout_marginHorizontal="30dp"
            android:padding="10dp"
            android:textSize="19sp"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />

        <TextView
            android:id="@+id/user_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="19sp"
            android:typeface="sans"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_name" />

        <TextView
            android:id="@+id/logoff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/round_button"
            android:backgroundTint="#D32F2F"
            android:paddingHorizontal="79dp"
            android:paddingVertical="7.5dp"
            android:text="@string/logoff"
            android:textColor="#FFF"
            android:textSize="17sp"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/change_password"
            tools:targetApi="lollipop" />

        <TextView
            android:id="@+id/change_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/round_button"
            android:backgroundTint="#939393"
            android:paddingHorizontal="43dp"
            android:paddingVertical="7.5dp"
            android:text="@string/changePassword"
            android:textColor="#FFF"
            android:textSize="17sp"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/change_name"
            tools:targetApi="lollipop" />

        <TextView
            android:id="@+id/change_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/round_button"
            android:backgroundTint="#939393"
            android:paddingHorizontal="45dp"
            android:paddingVertical="7.5dp"
            android:text="@string/changeUsername"
            android:textColor="#FFF"
            android:textSize="17sp"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_email"
            tools:targetApi="lollipop" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>