<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/schedule_form_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/nav_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_arrow_back"
                android:text="@string/back"
                android:textSize="20sp"
                android:drawableStart="@drawable/ic_arrow_back" />

        </androidx.appcompat.widget.Toolbar>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/schedule_title_form_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="55dp"
            android:paddingLeft="55dp"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/schedule_form_toolbar"
            tools:ignore="RtlSymmetry">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/schedule_title_form_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="55dp"
                android:layout_marginRight="55dp"
                android:hint="@string/scheduleTitleForm" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/schedule_description_form_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="55dp"
            android:paddingLeft="55dp"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/schedule_title_form_layout"
            tools:ignore="RtlSymmetry">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/schedule_description_form_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="55dp"
                android:layout_marginRight="55dp"
                android:hint="@string/scheduleDescriptionForm" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/schedule_long_description_form_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="55dp"
            android:paddingLeft="55dp"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/schedule_description_form_layout"
            tools:ignore="RtlSymmetry">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/schedule_long_description_form_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="55dp"
                android:layout_marginRight="55dp"
                android:hint="@string/scheduleDetailsForm" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/schedule_author_form_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="55dp"
            android:paddingLeft="55dp"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/schedule_long_description_form_layout"
            tools:ignore="RtlSymmetry">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/schedule_author_form_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="55dp"
                android:layout_marginRight="55dp"
                android:hint="@string/scheduleAuthorForm" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/create_schedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="#1976D2"
            android:src="@drawable/ic_done"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:rippleColor="#fff" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>