<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/nav_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_arrow_back"
                android:text="@string/back"
                android:textSize="20sp"
                android:drawableStart="@drawable/ic_arrow_back" />

        </androidx.appcompat.widget.Toolbar>

        <ImageView
            android:id="@+id/reset_password_icon"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_reset_password"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_marginBottom="70dp"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="parent"
            android:text="@string/typeYourEmailBelow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_field"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_marginStart="55dp"
                android:layout_marginEnd="55dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="55dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="55dp"
            android:background="@drawable/round_button_login"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="sans-serif-black"
            android:text="@string/confirmRegisterButton"
            android:textColor="#FFF"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_field" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>